--- a/README.org
+++ b/README.org
@@ -548,6 +548,10 @@ appropriate elisp files. I will cover how this is done further in this document.
 
      (use-package sly)
 
+     ;; Add hook to go-mode for lsp and yasnippet
+     (add-hook 'go-mode-hook #'lsp-deferred)
+     (add-hook 'go-mode-hook #'yas-minor-mode)
+
    #+end_src
 
    I also use a simple package called ~lsp-ui~ to add some more pretty UI
