--- a/README.org
+++ b/README.org
@@ -395,7 +395,13 @@ appropriate elisp files. I will cover how this is done further in this document.
        (org-roam-directory "~/Notes")
        (org-roam-capture-templates
         ;; My default org-roam template
-        '(("c" "Concepts" plain
+        '(("a" "AI" plain
+           (file "~/Notes/RoamTemplates/DefaultTemplate.org")
+           :if-new (file+head
+                    "Content/${slug}.org"
+                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: AI ArtificialIntelligence")
+           :unnarrowed t)
+          ("c" "Concepts" plain
            (file "~/Notes/RoamTemplates/DefaultTemplate.org")
            :if-new (file+head
                     "Content/${slug}.org"
@@ -405,13 +411,25 @@ appropriate elisp files. I will cover how this is done further in this document.
            (file "~/Notes/RoamTemplates/DefaultTemplate.org")
            :if-new (file+head
                     "Content/${slug}.org"
-                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n")
+                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: ")
+           :unnarrowed t)
+          ("m" "Mathematics" plain
+           (file "~/Notes/RoamTemplates/DefaultTemplate.org")
+           :if-new (file+head
+                    "Content/${slug}.org"
+                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: Math Mathematics")
            :unnarrowed t)
           ("o" "One Off" plain
            (file "~/Notes/RoamTemplates/DefaultTemplate.org")
            :if-new (file+head
                     "Content/${slug}.org"
                     "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: OneOff")
+           :unnarrowed t)
+          ("P" "Person" plain
+           (file "~/Notes/RoamTemplates/DefaultTemplate.org")
+           :if-new (file+head
+                    "Content/${slug}.org"
+                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: Person")
            :unnarrowed t)
           ("l" "Programming Language" plain
            (file "~/Notes/RoamTemplates/DefaultTemplate.org")
