trying to add fullscreen capabilities to exwm

--- a/exwm/README.org
+++ b/exwm/README.org
@@ -118,7 +118,7 @@ cover the desktop entry I use so I can select exwm from my login screen
 
               ;; Move between windows
               ([?\s-b] . windmove-left)
-              ([?\s-f] . windmove-right)
+              ([?\s-f] . exwm-layout-unset-fullscreen)
               ([?\s-p] . windmove-up)
               ([?\s-n] . windmove-down)
 
@@ -143,4 +143,13 @@ cover the desktop entry I use so I can select exwm from my login screen
       (exwm-input-set-key (kbd "s-x") 'counsel-linux-app)
 
       (exwm-enable))
+
+    (defun exwm-workspace--get-geometry (frame)
+      "Return the geometry of frame FRAME."
+      (or (frame-parameter frame 'exwm-geometry)
+          (make-instance 'xcb:RECTANGLE
+                         :x (window-pixel-left)
+                         :y (window-pixel-top)
+                         :width (window-pixel-width)
+                         :height (window-pixel-height))))
   #+end_src
