trying to force exwm resolution

--- a/exwm/README.org
+++ b/exwm/README.org
@@ -84,6 +84,9 @@ cover the desktop entry I use so I can select exwm from my login screen
   #+begin_src emacs-lisp
     (use-package exwm
       :config
+      ;; Set resolution
+      (run-in-background "xrandr -s 1920x1080")
+
       ;; Set the default number of workspaces
       (setq exwm-workspace-number 5)
 
