--- a/README.org
+++ b/README.org
@@ -580,6 +580,13 @@ appropriate elisp files. I will cover how this is done further in this document.
      ;; Add hook to go-mode for lsp and yasnippet
      (add-hook 'go-mode-hook #'lsp-deferred)
      (add-hook 'go-mode-hook #'yas-minor-mode)
+
+     ;; Make go-mode use spaces instead of tabs
+     (add-hook 'go-mode-hook
+               (lambda ()
+                 (add-hook 'before-save-hook 'gofmt-before-save)
+                 (setq tab-width 4)
+                 (setq indent-tabs-mode 1)))
    #+end_src
 
    I also like to use ~electric-pair-mode~ to auto complete closing parenthesis,
