--- a/README.org
+++ b/README.org
@@ -525,6 +525,11 @@ appropriate elisp files. I will cover how this is done further in this document.
 
      (add-hook 'html-mode-hook 'lsp)
 
+     ;; add support for "gohtml" files
+     (setq web-mode-engines-alist
+           '(("go"    . "\\.gohtml\\'"))
+     )
+
      (add-hook 'js-mode-hook
                (lambda()
                  (setq tab-width 2)
