adding protobuf mode package

--- a/README.org
+++ b/README.org
@@ -560,6 +560,8 @@ appropriate elisp files. I will cover how this is done further in this document.
 
      (use-package go-mode)
 
+     (use-package protobuf-mode)
+
      (use-package dockerfile-mode)
 
      (use-package jinja2-mode)
@@ -590,7 +592,7 @@ appropriate elisp files. I will cover how this is done further in this document.
      (add-hook 'go-mode-hook #'lsp-deferred)
      (add-hook 'go-mode-hook #'yas-minor-mode)
 
-     ;; Make go-mode use spaces instead of tabs
+     ;; Set tab width and before-save-hook for go-mode
      (add-hook 'go-mode-hook
                (lambda ()
                  (add-hook 'before-save-hook 'gofmt-before-save)
