removing transparency from config

--- a/README.org
+++ b/README.org
@@ -48,8 +48,8 @@ appropriate elisp files. I will cover how this is done further in this document.
      (setq sh-basic-offset 2)
 
      ;; Set frame transparency
-     (set-frame-parameter (selected-frame) 'alpha '(96 . 92))
-     (add-to-list 'default-frame-alist '(alpha . (96 . 92)))
+     ;; (set-frame-parameter (selected-frame) 'alpha '(96 . 92))
+     ;; (add-to-list 'default-frame-alist '(alpha . (96 . 92)))
      (set-frame-parameter (selected-frame) 'fullscreen 'maximized)
      (add-to-list 'default-frame-alist '(fullscreen . maximized))
    #+end_src
