--- a/README.org
+++ b/README.org
@@ -605,6 +605,10 @@ appropriate elisp files. I will cover how this is done further in this document.
      (add-hook 'go-mode-hook #'lsp-deferred)
      (add-hook 'go-mode-hook #'yas-minor-mode)
 
+     ;; Add hook to go-mode for lsp and yasnippet
+     (add-hook 'zig-mode-hook #'lsp-deferred)
+     (add-hook 'zig-mode-hook #'yas-minor-mode)
+
      ;; Set tab width and before-save-hook for go-mode
      (add-hook 'go-mode-hook
                (lambda ()
